--- a/templates/user_dash.html
+++ b/templates/user_dash.html
@@ -9,7 +9,7 @@
                     <img src="/static/images/salon.jpeg" class="card-img-top" alt="salon" height="158px">
                     <div class="card-body">
                       <h5 class="card-title">Salon</h5>
-                      <a href="#" class="btn btn-primary">See best offers</a>
+                      <a href="#" class="btn btn-primary">Check out packages</a>
                     </div>
                   </div>
               </div>
@@ -27,7 +27,7 @@
                     <img src="/static/images/acr.jpeg" class="card-img-top" alt="acrepair">
                     <div class="card-body">
                       <h5 class="card-title">AC Repair</h5>
-                      <a href="#" class="btn btn-primary">Check out top deals</a>
+                      <a href="#" class="btn btn-primary">Check out packages</a>
                     </div>
                   </div>
               </div>
@@ -49,21 +49,7 @@
                             <td>AC Repair</td>
                             <td>John Doe</td>
                             <td>123-456-7890</td>
-                            <td>Requested<a href="#" class="btn btn-link">Close it?</a></td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Salon</td>
-                            <td>Jane Smith</td>
-                            <td>098-765-4321</td>
-                            <td>Closed</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Cleaning</td>
-                            <td>Mike Johnson</td>
-                            <td>456-789-0123</td>
-                            <td>Requested</td>
+                            <td>Requested<a href="/close" class="btn btn-link">Close it?</a></td>
                         </tr>
                         <!-- Additional rows as needed -->
                     </tbody>
