--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -25,10 +25,10 @@
                     <a class="nav-link" href="#">Summary</a>
                   </li>
                   <li class="nav-item">
-                    <a  href="/logout" class="nav-link" href="#" style="color: red;">Logout</a>
+                    <a  href="/logout" class="nav-link" style="color: red;">Logout</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">My Profile</a>
+                  <a href="/user_profile/{{user_info.id}}" type="button">My Profile</a>
                   </li>
                 </ul>
                 <span class="navbar-text">
