--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -28,7 +28,7 @@
                     <a  href="/logout" class="nav-link" style="color: red;">Logout</a>
                   </li>
                   <li class="nav-item">
-                  <a href="/user_profile/{{user_info.id}}" type="button">My Profile</a>
+                    <a class="nav-link" href="#" type="button">My Profile</a>
                   </li>
                 </ul>
                 <span class="navbar-text">
