--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -11,6 +11,7 @@
     <p>Location: {{ user.location }}</p>
     <p>Pin Code: {{ user.pin_code }}</p>
     <p>Status: {{ user.user_status }}</p>
-    <a href="{{ url_for('user_dashboard') }}">Back to Dashboard</a>
+    <p>Phone Number: {{ user.phone }}</p>
+    <!-- <a href="{{ url_for('user_dashboard') }}">Back to Dashboard</a> -->
 </body>
 </html>
