--- a/templates/professional_profile.html
+++ b/templates/professional_profile.html
@@ -10,10 +10,11 @@
     <p>Email: {{ professional.email }}</p>
     <p>Service: {{ professional.service_name }}</p>
     <p>Experience: {{ professional.experience }}</p>
+    <p>Phone Number: {{ professional.phone }}</p>
     <p>Location: {{ professional.location }}</p>
     <p>Pin Code: {{ professional.pin_code }}</p>
     <p>Status: {{ professional.prof_status }}</p>
     
-    <a href="{{ url_for('admin_dashboard') }}">Back to Admin Dashboard</a>
+    <!-- <a href="{{ url_for('admin_dashboard') }}">Back to Admin Dashboard</a> -->
 </body>
 </html>
