--- a/templates/signup.html
+++ b/templates/signup.html
@@ -34,6 +34,10 @@
                     <input type="text" class="form-control" name="pin_code" id="pin_code" placeholder="">
                 </div>
                 <div class="mb-3">
+                    <label for="phone" class="form-label">Phone</label>
+                    <input type="number" class="form-control" name="phone" id="phone" placeholder="">
+                </div>
+                <div class="mb-3">
                     <button type="submit" class="btn btn-secondary">Register</button>
                     <p>Existing User? <a href="/login">Login</a></p>
                     <div class="err_msg">{{msg}}</div>
