--- a/templates/signup2.html
+++ b/templates/signup2.html
@@ -41,6 +41,10 @@
                         <input type="number" class="form-control" name="experience" id="experience" placeholder="">
                     </div>
                     <div class="mb-3">
+                        <label for="phone" class="form-label">Phone</label>
+                        <input type="number" class="form-control" name="phone" id="phone" placeholder="">
+                    </div>
+                    <div class="mb-3">
                         <label for="attach_documents" class="form-label">Attach Documents</label>
                         <input type="file" class="form-control" name="attach_documents" id="attach_documents">
                     </div>
