--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -16,7 +16,7 @@
               <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{{url_for('user_dashboard')}}">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Search</a>
@@ -28,12 +28,12 @@
                     <a  href="/logout" class="nav-link" style="color: red;">Logout</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" type="button">My Profile</a>
+                    <a class="nav-link" href="{{url_for('view_user_profile')}}" type="button">My Profile</a>
                   </li>
                 </ul>
-                <span class="navbar-text">
+                <!-- <span class="navbar-text">
                   Welcome {{name}}!
-                </span>
+                </span> -->
               </div>
             </div>
           </nav>
