--- a/templates/admin_search.html
+++ b/templates/admin_search.html
@@ -95,7 +95,7 @@
         <div class="search-container">
             <label for="search-by">Search by:</label>
             <select id="search-by" name="search-by">
-                <option value="service-request">Service Request</option>
+                <!-- <option value="service-request">Service Request</option> -->
                 <option value="customer">Customer</option>
                 <option value="professional">Professional</option>
                 <!-- Add other options as needed -->
