--- a/templates/prof_layout.html
+++ b/templates/prof_layout.html
@@ -37,6 +37,7 @@
 <body>
     <div class="header">
         <span class="title">Welcome Professional!</span>
+        <a href="#">My Profile</a> |
         <a href="{{ url_for('prof_dashboard') }}">Home</a> |
         <a href="{{ url_for('search_professional') }}">Search</a> |
         <a href="#">Summary</a> |
