--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -6,6 +6,7 @@
     <title>HomEase</title>
     <link rel="stylesheet" href="/static/styles/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    
 </head>
 <body>
     <div class="my_container">
@@ -19,7 +20,7 @@
                     <a class="nav-link active" aria-current="page" href="{{url_for('user_dashboard')}}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Search</a>
+                    <a class="nav-link" href="{{url_for('search_professional')}}">Search</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Summary</a>
@@ -28,7 +29,7 @@
                     <a  href="/logout" class="nav-link" style="color: red;">Logout</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('view_user_profile')}}" type="button">My Profile</a>
+                    <a class="nav-link button" href="#">My Profile</a>
                   </li>
                 </ul>
                 <!-- <span class="navbar-text">
